# nix-priv-sep

./: LICENSE  README.md  priv-sep-conf.nix
priv-sep-pkgs/: default.nix
priv-sep-pkgs/priv-sep/: default.nix  util.nix
priv-sep-pkgs/slim/: chown-xauthority.patch  default.nix
priv-sep-pkgs/xephyr-launcher/: default.nix
priv-sep-pkgs/xephyr-launcher/builddir/src/: ClientLauncher.hs  ServerLauncher.hs  stack.yaml  xephyr-launcher.cabal
