name:                xephyr-launcher
version:             0.1.0.0
synopsis:            Xephyr launcher that (re)tries to find a free display number
-- description:         Please see README.md
-- homepage:            https://github.com/githubuser/xephyr-launcher#readme
license:             BSD3
license-file:        LICENSE
author:              Timo Petteri Sinnemäki
maintainer:          timo.sinnemaki@helsinki.fi
copyright:           2016 Timo Petteri Sinnemäki
category:            System
build-type:          Simple
cabal-version:       >=1.10

executable xephyr-server-launcher
  hs-source-dirs:      .
  main-is:             ServerLauncher.hs
  default-language:    Haskell2010
  build-depends:       base            >= 4.7 && < 5
                     , process         >= 1.2
                     , parsec          >= 3.1
                     , parsec-numbers  >= 0.1
                     , filepath        >= 1.4
                     , directory       >= 1.2.5
                     , bytestring      >= 0.10
                     , binary          >= 0.7
                     , unix            >= 2.7
                     , unix-bytestring >= 0.3

executable xephyr-client-launcher
  hs-source-dirs:      .
  main-is:             ClientLauncher.hs
  default-language:    Haskell2010
  build-depends:       base           >= 4.7 && < 5
                     , process        >= 1.2
                     , filepath       >= 1.4
                     , directory      >= 1.2.5
